--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,17 +6,22 @@
     <%#= link_to 'New Post', new_post_path %>
   </li>
 </ul>
+<% if logged_in? %>
 <div class='nav_item'>
   <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
 </div>
+<% end %>
 <div class='btn-group nav_item'>
+
   <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
     Categories <span class='caret'></span>
   <% end %>
+
   <ul class='dropdown-menu'>
     <% Category.all.each do |category| %>
       <li><%= link_to category.name , category_path(category) %></li>
     <% end %>
+    <% if logged_in? %>
     <li class='divider'></li>
     <li>
       <%= link_to(new_category_path) do %>
@@ -24,5 +29,39 @@
         New Category
         <% end %>
     </li>
+    <% end %> 
+  </ul>
+  <ul class="nav">
+    <li>
+      <%= link_to(register_path) do %>
+        Register
+        <% end %>
+    </li>
   </ul>
 </div>
+
+<% if logged_in? %>
+  <div class='nav_item'>
+    <p class="navbar-text">Hi <%= current_user.username %></p>
+  </div>
+    <div class='nav_item'>
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-small' %>
+  </div>
+  <div class='nav_item'>
+    <%= link_to 'Log out', logout_path, class: 'btn btn-small' %>
+  </div>
+  
+  <div class='nav_item'>
+    <%= link_to 'View Profile', user_path(current_user.id), class: 'btn btn-small' %>
+  </div>
+  
+<% else %>  
+  <div class='nav_item'>
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
+  
+    <div class='nav_item'>
+      <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
+    </div>
+ 
+<% end %>
