--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,6 +2,7 @@
   <div class="span8 well">
     <%= render post.categories %>
     <h4><%= link_to post.title, fix_url(post.url) %></h4>
+    <%= link_to 'edit', edit_post_path(post) %>
     <p><%= post.description %></p>
     <p>
     <span class="quiet">posted by</span> <%= post.creator.username %>
