--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,8 @@
-<p class='pull-right'>
-  [<%= link_to 'edit this post', edit_post_path(@post) %>]
-</p>
-
+<% if logged_in? %>
+  <p class='pull-right'>
+    [<%= link_to 'edit this post', edit_post_path(@post) %>]
+  </p>
+<% end %>
 <p><%= render @post.categories %></p>
 
 <%= render 'shared/content_title', title: @post.title %>
@@ -9,14 +10,16 @@
 <p><%= @post.description %></p>
 <hr/>
 
-<%= form_for [ @post, @comment ] do |f| %>
-  <%= render 'shared/errors', obj: @comment %>
-  <div class='control-group'>
-    <%= f.label :body, 'Leave a comment' %>
-    <%=  f.text_area :body, rows: 3, class: 'span4' %>
-  </div>
-  <br/>
-  <%= f.submit 'Create Comment', class: 'btn btn-primary' %>
+<% if logged_in? %>
+  <%= form_for [ @post, @comment ] do |f| %>
+    <%= render 'shared/errors', obj: @comment %>
+    <div class='control-group'>
+      <%= f.label :body, 'Leave a comment' %>
+      <%=  f.text_area :body, rows: 3, class: 'span4' %>
+    </div>
+    <br/>
+    <%= f.submit 'Create Comment', class: 'btn btn-primary' %>
+  <% end %>
 <% end %>
 
 <h5>Comments:</h5>
