--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,18 +41,50 @@
 </div>
 
 <% if logged_in? %>
+
   <div class='nav_item'>
-    <p class="navbar-text">Hi <%= current_user.username %></p>
-  </div>
-    <div class='nav_item'>
     <%= link_to 'New Post', new_post_path, class: 'btn btn-small' %>
   </div>
   <div class='nav_item'>
     <%= link_to 'Log out', logout_path, class: 'btn btn-small' %>
   </div>
   
-  <div class='nav_item'>
-    <%= link_to 'View Profile', user_path(current_user.id), class: 'btn btn-small' %>
+  <div class='btn-group nav_item'>
+    
+    <%= link_to '#', class: 'btn btn-small dropdown-toggle' , 'data-toggle' => 'dropdown' do %>
+      <%= current_user.username %> <span class='caret'></span>
+    <% end %>
+    <ul class='dropdown-menu'>
+      
+      <li> 
+        <%= link_to edit_user_path(current_user)  do %>
+          <i class='icon-pencil'></i>
+          edit profile
+        <% end %>
+      </li>
+       <li> 
+        <%= link_to user_path(current_user)  do %>
+          <i class='icon-user'></i>
+          view profile
+        <% end %>
+      </li>
+      <li> 
+        <%= link_to logout_path  do %>
+          <i class='icon-circle-arrow-left'></i>
+          logout
+        <% end %>
+      </li>
+      
+     </ul>
+    
+  </div>
+  
+    <div class='nav_item'>
+    
+    <%= link_to edit_user_path(current_user.id), class: 'btn btn-small dropdown-toggle' do %>
+      Edit Profile <span class='caret'></span>
+    <% end %>
+    
   </div>
   
 <% else %>  
@@ -60,8 +92,8 @@
     <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
   </div>
   
-    <div class='nav_item'>
-      <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
-    </div>
+  <div class='nav_item'>
+    <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
+  </div>
  
 <% end %>
