--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,7 @@
       <% end %>
       <br/>
     <% end %>
-    <%= post.total_votes %> votes
+    <%= pluralize(post.total_votes, 'vote') %>
     <br/>
     <% if logged_in? %>
       <%= link_to vote_post_path(post, vote: false), method: 'post' do %>
