--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,25 +2,27 @@
 <%= render 'shared/errors', obj: @post %>
 
 <div class="well">
+  <div class="form-group">
   <%= form_for @post do |f| %>
     <div class="control-group">
-      <%= f.label :title %>
-      <%= f.text_field :title %>
+      <%= f.label :title, class: "control-label" %></br>
+      <%= f.text_field :title, class: "span4" %>
     </div>
     <div class="control-group">
-      <%= f.label :url %>
-      <%= f.text_field :url %>
+      <%= f.label :url, class: "control-label" %></br>
+      <%= f.text_field :url,class: "span4" %>
     </div>
     <div class="control-group">
-      <%= f.label :description %>
-      <%= f.text_area :description, rows: 5 %>
+      <%= f.label :description, class: "control-label" %></br>
+      <%= f.text_area :description, rows: 5,class: "span4" %>
     </div>
     <div class="control-group">
-      <%= f.label "Categories" %>
+      <%= f.label "Categories", class: "control-label" %></br>
       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
-        <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+        <% cb.label(class: "checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
       <% end %>
     </div>
       <%= f.submit(@post.new_record? ? "Create Post" : "Update Post", class: 'btn btn-primary') %>
   <% end %>
+  </div>
 </div>
