--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,11 +24,21 @@
 
 <% if params[:tab].nil? %>
   <% @user.posts.each do |post| %>
+  </br>
+  <div class="row">
+    <div id="notice_<%= post.id %>" class='span6' style="display:none">
+        <%= render :partial => 'layouts/messages' , :locals => { :flash => flash } %>
+    </div>
+    <div class="span6"></div>
+  </div>
+  </br>
+  
     <%= render 'posts/post', post: post %>
   <% end %>
 
 <% elsif params[:tab] == 'comments' %>
   <% @user.comments.each do |comment| %>
+  </br>
     <%= render 'comments/comment', comment: comment, show_post: true %>
   <% end %>
 <% end %>
