finished time zones

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
 </ul>
 
 <div class='btn-group nav_item'>
-  <%= link_to '#', class: 'btn btn-small btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+  <%= link_to '#', class: 'btn btn-small btn-default dropdown-toggle', 'data-toggle' => 'dropdown' do %>
     Categories <span class='caret'></span>
   <% end %>
   <ul class='dropdown-menu'>
@@ -33,10 +33,10 @@
 
 <% if logged_in? %>
   <div class='nav_item'>
-    <%= link_to 'New Post', new_post_path, class: 'btn btn-primary btn-small' %>
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-default btn-small' %>
   </div>
   <div class='btn-group nav_item'>
-    <%= link_to '#', class: 'btn btn-small btn-primary dropdown-toggle' , 'data-toggle' => 'dropdown' do %>
+    <%= link_to '#', class: 'btn btn-small btn-default dropdown-toggle' , 'data-toggle' => 'dropdown' do %>
       <%= current_user.username %> <span class='caret'></span>
     <% end %>
     <ul class='dropdown-menu'>
@@ -62,9 +62,9 @@
   </div>
 <% else %>  
   <div class='nav_item'>
-    <%= link_to 'Register', register_path, class: 'btn btn-primary btn-small' %>
+    <%= link_to 'Register', register_path, class: 'btn btn-default btn-small' %>
   </div>
   <div class='nav_item'>
-    <%= link_to 'Log in', login_path, class: 'btn btn-primary' %>
+    <%= link_to 'Log in', login_path, class: 'btn btn-default' %>
   </div>
 <% end %>
