--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <header>
       <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-          <div class="container">
+          <div class="container-fluid">
             <%= render 'layouts/navigation' %>
           </div>
         </div>
