--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <dt> Username:</dt>
     <dd><%= @user.username %></dd>
     <dt> Time zone:</dt>
-    <dd>Eastern Time (US & Canada)</dd>
+    <dd><%= @user.time_zone %></dd>
   </dl>
 </div>
 
