--- a/app/assets/stylesheets/superhero/base.less
+++ b/app/assets/stylesheets/superhero/base.less
@@ -1,10 +1,10 @@
-// Cyborg
+// Superhero
 // Bootswatch
 // base.less
 // allows access to core variables and mixins inside bootswatch.css.less
 
 // @import "twitter/bootstrap/variables";
-@import "cyborg/variables";
+@import "superhero/variables";
 
 // @import "twitter/bootstrap/mixins";
-@import "cyborg/mixins";
+@import "superhero/mixins";
