--- a/app/assets/stylesheets/superhero/loader.css.less
+++ b/app/assets/stylesheets/superhero/loader.css.less
@@ -1,13 +1,13 @@
-// Cyborg
+// Superhero
 // Bootswatch
 // loader.css.less
 // Customize the modules loaded here
 
 // @import "twitter/bootstrap/variables";
-@import "cyborg/variables";
+@import "superhero/variables";
 
 // @import "twitter/bootstrap/mixins";
-@import "cyborg/mixins";
+@import "superhero/mixins";
 
 @import "twitter/bootstrap/normalize";
 @import "twitter/bootstrap/print";
