--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header>
-      <div class="navbar navbar-inverse">
-        <div class="navbar-inner">
-          <div class="container-fluid">
+      <div class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
             <%= render 'layouts/navigation' %>
           </div>
         </div>
