--- a/app/views/layouts/superhero.html.erb
+++ b/app/views/layouts/superhero.html.erb
@@ -12,7 +12,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "cyborg", :media => "all" %>
+    <%= stylesheet_link_tag "superhero", :media => "all" %>
 
     <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
 
@@ -375,7 +375,7 @@
     <!-- Javascripts
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "cyborg" %>
+    <%= javascript_include_tag "superhero" %>
     <%= yield(:page_javascript) if content_for?(:page_javascript) %>
   </body>
 </html>
