--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
     [<%= link_to 'edit this post', edit_post_path(@post) %>]
   </p>
 <% end %>
-<p><%= render @post.categories %></p>
+<p><%= render @post['categories'] %></p>
 
 <%= render 'shared/content_title', title: @post.title %>
 
