--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -14,7 +14,7 @@
 <div class="well">
   <%= form_for @category do |f| %>
     <div class="control-group">
-      <%= f.label :name %>
+      <%= f.label :name %></br>
       <%= f.text_field :name %>
     </div>
       <%= f.submit(@category.new_record? ? "Create Category" : "Update Category", class: 'btn btn-success') %>
