--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,11 +6,11 @@
       <%= f.text_field :username %>
     </div>
      <div class="control-group">
-      <%= f.label :password %>
+      <%= f.label :password %></br>
       <%= f.password_field :password %>
     </div>
     <div class="control-group">
-      <%= f.label :time_zone %>
+      <%= f.label :time_zone %></br>
       <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, default: Time.zone.name %>
     </div>
     <%= f.submit @user.new_record? ? "Register" : "Update Profile", class: 'btn btn-success' %>
